RESOLVED FIXED120821
Fix build warnings by unused parameter
https://bugs.webkit.org/show_bug.cgi?id=120821
Summary Fix build warnings by unused parameter
Jinwoo Song
Reported 2013-09-05 19:13:44 PDT
/mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/graphics/gstreamer/TextSinkGStreamer.cpp:52:13: warning: unused parameter ‘object’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/graphics/gstreamer/TextSinkGStreamer.cpp:52:13: warning: unused parameter ‘propertyId’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/graphics/gstreamer/TextSinkGStreamer.cpp:52:13: warning: unused parameter ‘value’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/graphics/gstreamer/TextSinkGStreamer.cpp:52:13: warning: unused parameter ‘pspec’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/graphics/gstreamer/TextSinkGStreamer.cpp:58:13: warning: unused parameter ‘object’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/graphics/gstreamer/TextSinkGStreamer.cpp:58:13: warning: unused parameter ‘propertyId’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/graphics/gstreamer/TextSinkGStreamer.cpp:58:13: warning: unused parameter ‘value’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/graphics/gstreamer/TextSinkGStreamer.cpp:58:13: warning: unused parameter ‘pspec’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/network/soup/SynchronousLoaderClientSoup.cpp:35:6: warning: unused parameter ‘handle’ [-Wunused-parameter] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release-wk1/build/Source/WebCore/platform/network/soup/SynchronousLoaderClientSoup.cpp:35:6: warning: unused parameter ‘challenge’ [-Wunused-parameter]
Attachments
Patch (2.64 KB, patch)
2013-09-05 19:19 PDT, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2013-09-05 19:19:37 PDT
WebKit Commit Bot
Comment 2 2013-09-05 20:42:14 PDT
Comment on attachment 210694 [details] Patch Clearing flags on attachment: 210694 Committed r155170: <http://trac.webkit.org/changeset/155170>
WebKit Commit Bot
Comment 3 2013-09-05 20:42:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.