Fix build warnings by unused parameter https://bugs.webkit.org/show_bug.cgi?id=120821

Reviewed by Anders Carlsson.

Fix warning by removing unused parameter.

* platform/graphics/gstreamer/TextSinkGStreamer.cpp:
(webkitTextSinkGetProperty):
(webkitTextSinkSetProperty):
* platform/network/soup/SynchronousLoaderClientSoup.cpp:
(WebCore::SynchronousLoaderClient::didReceiveAuthenticationChallenge):


Canonical link: https://commits.webkit.org/138779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155170 268f45cc-cd09-0410-ab3c-d52691b4dbfc