Source/WebCore/platform/network/soup/SynchronousLoaderClientSoup.cpp
@@ -32,7 +32,7 @@
 
 namespace WebCore {
 
-void SynchronousLoaderClient::didReceiveAuthenticationChallenge(ResourceHandle* handle, const AuthenticationChallenge& challenge)
+void SynchronousLoaderClient::didReceiveAuthenticationChallenge(ResourceHandle*, const AuthenticationChallenge&)
 {
     notImplemented();
 }
